--- a/rootfs/etc/supervisor/conf.d/supervisord.conf
+++ b/rootfs/etc/supervisor/conf.d/supervisord.conf
@@ -60,3 +60,15 @@ priority=25
 directory=/usr/local/lib/web/frontend/static/novnc
 command=bash /usr/local/lib/web/frontend/static/novnc/utils/launch.sh --listen 6081
 stopasgroup=true
+
+[program:xrdp-sesman]
+command=/usr/sbin/xrdp-sesman --nodaemon
+user=root
+autorestart=true
+priority=400
+
+[program:xrdp]
+command=/usr/sbin/xrdp --nodaemon
+user=root
+autorestart=true
+priority=400
