ubuntu以外のユーザ名を想定しないよう変更．fcitxの設定場所の変更．

--- a/rootfs/etc/supervisor/conf.d/supervisord.conf
+++ b/rootfs/etc/supervisor/conf.d/supervisord.conf
@@ -72,3 +72,10 @@ command=/usr/sbin/xrdp --nodaemon
 user=root
 autorestart=true
 priority=400
+
+[program:fcitx]
+priority=30
+directory=%HOME%
+command=fcitx -D
+user=%USER%
+environment=DISPLAY=":1",HOME="%HOME%",USER="%USER%"
