--- a/Dockerfile.amd64
+++ b/Dockerfile.amd64
@@ -174,6 +174,8 @@ RUN gosu ubuntu echo 'export DONT_PROMPT_WSL_INSTALL=1' >> /home/ubuntu/.bashrc 
     gosu ubuntu bash -c "DONT_PROMPT_WSL_INSTALL=1 codium --install-extension ms-ceintl.vscode-language-pack-ja" && \
     gosu ubuntu bash -c "DONT_PROMPT_WSL_INSTALL=1 codium --install-extension ms-python.python"
 
+RUN gosu ubuntu cp /root/.gtkrc-2.0 /home/ubuntu
+
 ARG ROS_DISTRO=foxy
 ARG INSTALL_PACKAGE=desktop
 
